<resources>
    <string name="app_name">Parklux</string>
    <string name="title_home">Home</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t have account ?</string>
    <string name="register">Register</string>
    <string name="park_on">Park on</string>
    <string name="check_out">Check out</string>
    <string name="scan_the_qr_code">The QR code will be detected automatically once you have positioned the code within the scan.</string>
    <string name="total">Total price</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="receipt">Receipt</string>
    <string name="parking_summary">Parking summary</string>
    <string name="booking_id">Booking ID</string>
    <string name="logo">Logo</string>
    <string name="your_parking_spot_is_on">Slot name</string>
    <string name="check_in_on">Check-in on</string>
    <string name="directions">Click me to show the directions</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="already_a_member">Already a member?</string>
    <string name="user_avatar">User avatar</string>
    <string name="logout">Logout</string>
    <string name="customer">Customer</string>
    <string name="duration">Duration</string>
    <string name="you_dont_have_any_ongoing_order">You don\'t have any ongoing order</string>
    <string name="parking_completed">Parking completed</string>
    <string name="you_dont_have_any_order">You don\'t have any completed order</string>
    <string name="oops">Oops…</string>
    <string name="failed_create_booking">Failed to create a booking, something went wrong.</string>
    <string name="welcome_to">Welcome to %s</string>
    <string name="slot_name">Slot name</string>
    <string name="scan_again">Scan again</string>
    <string name="email_password_incorrect">The email or password is incorrect.</string>
    <string name="date_now">It\'s %s</string>
    <string name="price_per_hour">IDR %s/hour</string>
    <string name="total_price">IDR %s</string>
    <string name="screenshot_png">%s/screenshot.png</string>
    <string name="phone">Phone</string>
    <string name="your_slot">Your slot</string>
    <string name="empty_slot">Empty slot</string>
    <string name="disabled_slot">Disabled slot</string>
    <string name="taken_slot">Taken slot</string>
    <string name="update_profile">Update profile</string>
    <string name="hours">Hours</string>
    <string name="parking_time">Parking Time</string>
    <string name="minutes">Minutes</string>
    <string name="idr">IDR %s</string>
    <string name="total_price_only">Total price</string>
    <string name="safety_parking">Safety is number one priority\nParking on your slot</string>
    <string name="price">Price</string>
    <string name="price_hour">Price/hour</string>
    <string name="update_account">Update super admin account</string>
    <string name="save">Save</string>
    <string name="plus">+</string>
    <string name="add_admin">Add admin</string>
    <string name="add_super_admin">Add super admin</string>
    <string name="welcome_super_admin">Welcome Super Admin</string>
    <string name="minus">-</string>
    <string name="activity">Activity</string>
    <string name="update">Update</string>
    <string name="no_network_connection">No network connection</string>
    <string name="success">Success</string>
    <string name="update_account_success">Update account success</string>
    <string name="fill_all_the_entries">Please fill all the entries</string>
    <string name="fill_all_the_entries_value">Please fill all the entries with the correct value</string>
    <string name="admin">Admin</string>
    <string name="id">ID</string>
    <string name="update_customer">Update customer</string>
    <string name="update_admin">Update admin</string>
    <string name="open_hours">Open hours</string>
    <string name="close_hours">Close hours</string>
    <string name="name">Name</string>
    <string name="opening_hours">Opening hours</string>
    <string name="address">Address</string>
    <string name="password_hint">********</string>
    <string name="update_super_admin">Update super admin</string>
    <string name="delete_super_admin">Delete super admin</string>
    <string name="idr_price">IDR %s</string>
    <string name="other_super_admin">Another Super Admin</string>
    <string name="permit">Permit customer</string>
    <string name="range2">%s - %s</string>
    <string name="all">All</string>
    <string name="ongoing">Ongoing</string>
    <string name="completed">Completed</string>
    <string name="search">Search</string>
    <string name="ban_customer">Ban customer</string>
    <string name="parklux">Parklux</string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile">Edit profile</string>
    <string name="hide">Hide</string>
    <string name="asiajakarta">Asia/Jakarta</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="hello">Hello,</string>
    <string name="switch_super_admin">Switched to SUPER ADMIN page</string>
    <string name="only_have_booking_one">You only can make a booking once a time</string>
    <string name="fill_all_entries">Please fill all the entries with valid input</string>
    <string name="updated">Updated</string>
    <string name="email_already_registered">Failed to update profile, email already used!</string>
    <string name="id_booking">idBooking</string>
    <string name="share_body">This is my parking receipt using Parklux apps.</string>
    <string name="share_via">Share via</string>
    <string name="success_create_user">Success create user, please login</string>
    <string name="error">Error</string>
    <string name="switch_customer">Switched to CUSTOMER page</string>
    <string name="click_again_exit">Please click back again to exit</string>
    <string name="pattern">HH:mm</string>
    <string name="re_type_password">Re-type password</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="complete_order_title">Are you sure want to complete this order?</string>
    <string name="complete_order_description">You must show the barcode to exit gate guard within 15 minutes after press this checkout button</string>
    <string name="yes">Yes</string>
    <string name="digits">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789,.()-</string>
    <string name="open_on_google_maps">Open with Google Maps</string>
    <string name="history">History</string>
    <string name="thank_you_using_parklux">Thank you for using Parklux apps</string>
    <string name="show_this_qr_to_exit_gate_guard_for_check_out">Show this QR to exit gate guard for check out</string>
</resources>
