<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_login_register"
        android:layout_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header_with_logo"
        android:contentDescription="@string/header_logo" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_bottom_for_append_card"
        android:layout_marginVertical="@dimen/margin_padding_vertical_for_card"
        android:background="@drawable/card_layout_white"
        android:gravity="center"
        android:hint="@string/full_name"
        android:paddingVertical="@dimen/margin_padding_vertical_for_card"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_bottom_for_append_card"
        android:layout_marginVertical="@dimen/margin_padding_vertical_for_card"
        android:background="@drawable/card_layout_white"
        android:gravity="center"
        android:hint="@string/email"
        android:paddingVertical="@dimen/margin_padding_vertical_for_card"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_bottom_for_append_card"
        android:layout_marginVertical="@dimen/space_between_card"
        android:background="@drawable/card_layout_white"
        android:gravity="center"
        android:hint="@string/phone_number"
        android:paddingVertical="@dimen/margin_padding_vertical_for_card"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_bottom_for_append_card"
        android:layout_marginVertical="@dimen/space_between_card"
        android:background="@drawable/card_layout_white"
        android:gravity="center"
        android:hint="@string/password"
        android:paddingVertical="@dimen/margin_padding_vertical_for_card"
        app:layout_constraintTop_toBottomOf="@id/phone_number" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_marginHorizontal="@dimen/margin_horizontal_bottom_for_append_card"
        android:layout_marginVertical="@dimen/margin_button_vertical"
        android:background="@drawable/card_layout_blue_primary"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/already_a_member"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/already_a_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/hundred_margin"
        android:layout_marginBottom="@dimen/margin_horizontal_bottom_for_append_card"
        android:text="@string/already_a_member"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/four_dps"
        android:layout_marginBottom="@dimen/margin_horizontal_bottom_for_append_card"
        android:text="@string/login"
        android:textColor="@color/colorSecondary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/already_a_member" />
</androidx.constraintlayout.widget.ConstraintLayout>
