<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="@dimen/four_dps"
        android:layout_marginTop="28dp"
        android:src="@drawable/logo_blue"
        app:layout_constraintRight_toLeftOf="@+id/receipt_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/receipt_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_between_card"
        android:background="@drawable/card_layout_blue_receipt"
        android:paddingHorizontal="28dp"
        android:paddingVertical="60dp"
        android:text="@string/receipt"
        android:textColor="@color/white"
        android:textSize="@dimen/h1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/space_between_card"
        android:paddingTop="@dimen/space_between_card"
        android:text="@string/booking_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receipt_text"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/booking_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_between_card"
        android:paddingTop="@dimen/space_between_card"
        android:paddingEnd="@dimen/space_between_card"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receipt_text"
        tools:text="FCY15345454532"
        tools:ignore="RtlSymmetry" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parking_zone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_between_card"
        android:background="@drawable/card_layout_grey"
        android:padding="@dimen/space_between_card"
        app:layout_constraintTop_toBottomOf="@id/booking_id">

        <TextView
            android:id="@+id/parking_zone_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Mall Centre Point (Medan)" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/parking_zone_name"
            tools:text="Jl. Buntu No. 1" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parking_summary_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_between_card"
        android:background="@drawable/card_layout_grey"
        android:padding="@dimen/space_between_card"
        app:layout_constraintTop_toBottomOf="@id/parking_zone_layout">

        <TextView
            android:id="@+id/parking_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parking_summary"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/park_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/park_on"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/parking_summary" />

        <TextView
            android:id="@+id/parking_slot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/text_summary_in_out"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toRightOf="@id/park_on"
            app:layout_constraintTop_toBottomOf="@id/parking_summary"
            tools:text="B2 - 01"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/text_summary_in_out"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toRightOf="@id/parking_slot"
            app:layout_constraintTop_toBottomOf="@id/parking_summary"
            tools:text="(IDR 5000/hour)"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/in_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/park_on" />

        <TextView
            android:id="@+id/in_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/text_summary_in_out"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toRightOf="@id/in_tag"
            app:layout_constraintTop_toBottomOf="@id/park_on"
            tools:text="5 Jul 2019 - 08 : 00"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/out_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/in_tag" />

        <TextView
            android:id="@+id/out_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/text_summary_in_out"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toRightOf="@id/out_tag"
            app:layout_constraintTop_toBottomOf="@id/in_date"
            tools:text="5 Jul 2019 - 15 : 01"
            tools:ignore="RtlSymmetry" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/total_price_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_between_card"
        android:background="@drawable/card_layout_grey"
        android:padding="@dimen/space_between_card"
        app:layout_constraintTop_toBottomOf="@id/parking_summary_layout">

        <TextView
            android:id="@+id/total_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="IDR 40.000" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
