<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_details_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/twelve_dp"
        android:layout_marginRight="@dimen/twelve_dp"
        android:background="@drawable/card_layout_base_black_bottomsheet"
        android:padding="@dimen/twelve_dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <Button
            android:id="@+id/btn_checkout"
            style="@style/NoCaps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:background="@drawable/card_layout_white_dark"
            android:fontFamily="sans-serif-thin"
            android:text="@string/check_out"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/total_price_layout" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/custom_progressbar_dark"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_customer_Name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/twenty_dp"
            android:paddingTop="@dimen/twenty_dp"
            android:text="@string/booking_id"
            android:textColor="@color/darkGrey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/booking_id"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/booking_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/twenty_dp"
            android:paddingTop="@dimen/twenty_dp"
            android:textColor="@color/darkGrey"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_customer_Name"
            tools:ignore="RtlSymmetry"
            tools:text="FCY15345454532" />

        <TextView
            android:id="@+id/tv_customer_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twelve_dp"
            android:gravity="center"
            android:maxLines="2"
            android:textColor="@color/white"
            android:textSize="@dimen/h_medium2"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Nama" />

        <TextView
            android:id="@+id/swipe_up_indicator"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/four_dp"
            android:layout_gravity="center"
            android:background="@drawable/card_layout_dark_dark_grey"
            android:padding="@dimen/twenty_four_dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parking_summary_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:background="@drawable/card_layout_white_dark"
            android:padding="@dimen/twenty_dp"
            app:layout_constraintTop_toBottomOf="@id/parking_zone_layout">

            <TextView
                android:id="@+id/parking_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parking_summary"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/park_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/park_on"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="@+id/parking_summary"
                app:layout_constraintTop_toBottomOf="@id/parking_summary" />

            <TextView
                android:id="@+id/parking_slot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/twelve_dp"
                android:textColor="@color/white"
                app:layout_constraintLeft_toRightOf="@id/park_on"
                app:layout_constraintTop_toBottomOf="@id/parking_summary"
                tools:ignore="RtlSymmetry"
                tools:text="B2 - 01" />


            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/twelve_dp"
                android:textColor="@color/white"
                app:layout_constraintLeft_toRightOf="@id/parking_slot"
                app:layout_constraintTop_toBottomOf="@id/parking_summary"
                tools:ignore="RtlSymmetry"
                tools:text="(IDR 5000/hour)" />


            <TextView
                android:id="@+id/in_tag"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:text="@string/in"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@id/out_tag"
                app:layout_constraintStart_toStartOf="@+id/park_on"
                app:layout_constraintTop_toBottomOf="@id/park_on" />

            <TextView
                android:id="@+id/in_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/four_dp"
                android:textColor="@color/white"
                app:layout_constraintLeft_toRightOf="@id/in_tag"
                app:layout_constraintStart_toEndOf="@+id/out_tag"
                app:layout_constraintTop_toBottomOf="@id/park_on"
                tools:ignore="RtlSymmetry"
                tools:text="5 Jul 2019 - 08 : 00" />

            <TextView
                android:id="@+id/out_tag"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:paddingEnd="2dp"
                android:text="@string/out"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="@+id/in_tag"
                app:layout_constraintTop_toBottomOf="@id/in_tag" />

            <TextView
                android:id="@+id/out_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/four_dp"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/out_tag"
                app:layout_constraintTop_toBottomOf="@id/in_date"
                tools:ignore="RtlSymmetry"
                tools:text="5 Jul 2019 - 15 : 01" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/total_price_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:background="@drawable/card_layout_white_dark"
            android:padding="@dimen/twenty_dp"
            app:layout_constraintTop_toBottomOf="@id/parking_summary_layout">

            <TextView
                android:id="@+id/total_time_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parking_time"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:layout_constraintRight_toLeftOf="@id/hours_tag"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="2" />

            <TextView
                android:id="@+id/hours_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/four_dp"
                android:text="@string/hours"
                android:textColor="@color/white"
                app:layout_constraintRight_toLeftOf="@id/minutes"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/eight_dp"
                android:textColor="@color/white"
                app:layout_constraintRight_toLeftOf="@id/minutes_tag"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="2" />

            <TextView
                android:id="@+id/minutes_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/four_dp"
                android:text="@string/minutes"
                android:textColor="@color/white"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/total_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/total_time_tag" />

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hours_tag"
                tools:text="IDR 40.000" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parking_zone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:background="@drawable/card_layout_white_dark"
            android:padding="@dimen/twenty_dp"
            app:layout_constraintTop_toBottomOf="@id/booking_id">

            <TextView
                android:id="@+id/parking_zone_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Mall Centre Point (Medan)" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parking_zone_name"
                tools:text="Jl. Buntu No. 1" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>